public enum ItemState {
    forzen,inHand,thrownDown;
}
