public class Shovel extends Item{

    @Override
    void used(Player p, Activity a);
}
