public class SnowyHole {

}
